--- a/src/components/shared/MovieCard/MovieCard.css
+++ b/src/components/shared/MovieCard/MovieCard.css
@@ -153,6 +153,10 @@
 
 /*В 2 ряд*/
 @media screen and (max-width: 768px){
+  .movies-cards {
+    padding-bottom: 170px;
+  }
+
   .movies-card__image-container {
     height: 190px;
   }
@@ -212,6 +216,10 @@
 
 /*В 1 ряд*/
 @media screen and (max-width: 480px){
+  .movies-cards {
+    padding-bottom: 166px;
+  }
+
   .movies-card__image-container {
     height: 168px;
   }
