--- a/src/components/shared/SearchForm/SearchForm.css
+++ b/src/components/shared/SearchForm/SearchForm.css
@@ -60,11 +60,12 @@
 }
 
 .search__stroke {
-  margin: 15px 0 0 0;
+  margin: 15px 0 29px 0;
   border: solid 1px #424242;
 }
 
 .search__stroke-error {
+  margin-bottom: 0;
   border: solid 1px #EE3465;
 }
 
@@ -77,6 +78,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.search__error-hidden {
+  display: none;
 }
 
 @media screen and (max-width: 910px){
@@ -104,6 +109,11 @@
   }
 
   .search__stroke {
-    margin-top: 9px;
+    margin: 9px 0 43px 0;
+  }
+
+  .search__stroke-error {
+    margin-bottom: 13px;
+    border: solid 1px #EE3465;
   }
 }
