--- a/src/components/widgets/Navigation/Navigation.css
+++ b/src/components/widgets/Navigation/Navigation.css
@@ -202,4 +202,18 @@
     width: 40px;
     height: 40px;
   }
+
+  .unauthorized__navs {
+    gap: 14px;
+  }
+
+  .unauthorized__link {
+    font-size: 10px;
+  }
+
+  .unauthorized__button{
+    width: 54px;
+    height: 26px;
+    font-size: 10px;
+  }
 }
